lordofthecode/web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: lordofthecode
  labels:
    app: web
spec:
  template:
  selector:
    matchLabels:
      app: web
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0%
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: deviavir/lordofthecode:latest
        imagePullPolicy: "Always"
        ports:
        - name: web
          containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 30
        volumeMounts:
          - name: files
            mountPath: /usr/src/app/public/files
      volumes:
        - name: files
          persistentVolumeClaim:
            claimName: web-files
