lordofthecode/web/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: lordofthecode
  labels:
    app: web
spec:
  type: ClusterIP
  ports:
  - name: web
    port: 80
    targetPort: 80
  selector:
    app: web
