lordofthecode/web/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web
  namespace: lordofthecode
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
spec:
  rules:
  - host: lordofthecode.nl
    http:
      paths:
      - backend:
          serviceName: web
          servicePort: 80
        path: /
  - host: www.lordofthecode.nl
    http:
      paths:
      - backend:
          serviceName: web
          servicePort: 80
        path: /
  tls:
  - hosts:
    - lordofthecode.nl
    - www.lordofthecode.nl
    secretName: lord-of-the-code-tls
